Head, header including nav for Kitties to Go

--- a/cat-mock-up.html
+++ b/cat-mock-up.html
@@ -2,16 +2,27 @@
 <html>
   <head>
     <!-- what's the difference between what I have below and meta charset = utf-8? -->
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
-    <!-- book now link -->
+    <meta http-equiv = "Content-Type" content = "text/html; charset=utf-8" >
     <title>Ktties to Go!</title>
   </head>
 
   <body>
     <header>
-      <h1></h1>
+      <!-- book now link -->
+      <a href = "https://www.petfinder.com/">Open right MEOW! Book a cat -></a>
+      <h1>Kitties to Go!</h1>
+      <p><span>Seattle's premiere drive-thru cat rentals</span></p>
+      <!-- above is like slogan - not important like a header so no h2, h3, etc.  BUT we will want to style it differently so use span? -->
+
       <nav>
-        <!-- put links to things here: about, rates, liability release, kitty profiles, book a cat -->
+        <!-- put links to things here: about, rates, liability release, kitty profiles, book a cat.  We can use an unordered list and then would want to remove the bullets once we style. Links would be different for actual site once the other pages are built-->
+        <ul>
+          <li><a href="https://www.petfinder.com/about">About</a></li>
+          <li><a href="https://www.petfinder.com/rates">Rates</a></li>
+          <li><a href="https://www.petfinder.com/liability">Liability Release</a></li>
+          <li><a href="https://www.petfinder.com/kittyprof">Kity Profiles</a></li>
+          <li><a href="https://www.petfinder.com/">Book a Cat</a></li>
+        </ul>
       </nav>
     </header>
 
