--- a/cat-mock-up.html
+++ b/cat-mock-up.html
@@ -28,12 +28,34 @@
 
     <!-- the kitties to go story -->
     <article>
-        <h2></h2>
+        <h2>The Kitties To Go Story</h2>
+        <p>
+          Cat ipsum dolor sit amet, has closed eyes but still sees you meow. Scratch at the door then walk away destroy the blinds for curl into a furry donut swat turds around the house kick up litter thug cat stare at ceiling light. Intently stare at the same spot paw at beetle and eat it before it gets away scamper.
+        </p>
     </article>
 
     <!-- testimonials -->
     <atricle>
-      <h2></h2>
+      <h2>Testimonials</h2>
+      <figure>
+        <blockquote>
+          "Please stop looking at your phoneand pet me. Lounge in the doorway eatand then sleep on your face meowwww meowwww"
+        </blockquote>
+        <!-- if this is the way we properly dotestimonials it is blowing my mind! footers can be in things other than thebody?! woah. -->
+        <footer>
+          — <cite class="author">Jeremy</cite>
+        </footer>
+      </figure>
+
+      <figure>
+        <blockquote>
+          "Meow get video posted to internet for chasing red dot."
+        </blockquote>
+        <footer>
+          — <cite class="author">Jenny</cite> from  <cite class="company">the block</cite>
+        </footer>
+      </figure>
+
     </article>
 
     <!-- cat of the week and fan favorite - need to have picture, text, and link to book! -->
