Cat of the week and fan favorite - images still needed

--- a/cat-mock-up.html
+++ b/cat-mock-up.html
@@ -17,11 +17,11 @@
       <nav>
         <!-- put links to things here: about, rates, liability release, kitty profiles, book a cat.  We can use an unordered list and then would want to remove the bullets once we style. Links would be different for actual site once the other pages are built-->
         <ul>
-          <li><a href="https://www.petfinder.com/about">About</a></li>
-          <li><a href="https://www.petfinder.com/rates">Rates</a></li>
-          <li><a href="https://www.petfinder.com/liability">Liability Release</a></li>
-          <li><a href="https://www.petfinder.com/kittyprof">Kity Profiles</a></li>
-          <li><a href="https://www.petfinder.com/">Book a Cat</a></li>
+          <li><a href = "https://www.petfinder.com/about">About</a></li>
+          <li><a href = "https://www.petfinder.com/rates">Rates</a></li>
+          <li><a href = "https://www.petfinder.com/liability">Liability Release</a></li>
+          <li><a href = "https://www.petfinder.com/kittyprof">Kity Profiles</a></li>
+          <li><a href = "https://www.petfinder.com/">Book a Cat</a></li>
         </ul>
       </nav>
     </header>
@@ -43,7 +43,7 @@
         </blockquote>
         <!-- if this is the way we properly dotestimonials it is blowing my mind! footers can be in things other than thebody?! woah. -->
         <footer>
-          — <cite class="author">Jeremy</cite>
+          — <cite class = "author">Jeremy</cite>
         </footer>
       </figure>
 
@@ -52,7 +52,7 @@
           "Meow get video posted to internet for chasing red dot."
         </blockquote>
         <footer>
-          — <cite class="author">Jenny</cite> from  <cite class="company">the block</cite>
+          — <cite class = "author">Jenny</cite> from  <cite class = "company">the block</cite>
         </footer>
       </figure>
 
@@ -60,6 +60,27 @@
 
     <!-- cat of the week and fan favorite - need to have picture, text, and link to book! -->
     <aside>
+      <!-- not sure about section here but let's try it! -->
+      <section>
+        <h3>Cat of the Week</h3>
+        <figure>
+          <img src = "/biscuit.jpg" alt = "Cat on wrecking ball">
+          <figcaption>The Biscuit</figcaption>
+        </figure>
+        <p>All she wants is to break your walls.<a href = "https://www.petfinder.com/"> Book Now -></a>
+        </p>
+      </section>
+
+      <section>
+        <h3>Fan Favorite</h3>
+        <figure>
+          <img src = "/odin.jpg" alt = "Cat wanting belly-rub">
+          <figcaption>Odin</figcaption>
+        </figure>
+        <p>
+        <a href = "https://www.petfinder.com/" >Book Now -></a>
+        </p>
+      </section>
     </aside>
 
     <!-- contact information on 3 lines, disclaimer, copyright -->
