Got those pictures in! Added contact info and disclaimer to footer

--- a/cat-mock-up.html
+++ b/cat-mock-up.html
@@ -64,7 +64,7 @@
       <section>
         <h3>Cat of the Week</h3>
         <figure>
-          <img src = "/biscuit.jpg" alt = "Cat on wrecking ball">
+          <img src = "biscuit.png" alt = "Cat on wrecking ball" height = "100" width = "100">
           <figcaption>The Biscuit</figcaption>
         </figure>
         <p>All she wants is to break your walls.<a href = "https://www.petfinder.com/"> Book Now -></a>
@@ -74,7 +74,7 @@
       <section>
         <h3>Fan Favorite</h3>
         <figure>
-          <img src = "/odin.jpg" alt = "Cat wanting belly-rub">
+          <img src = "odin.jpg" alt = "Cat wanting belly-rub" height = "100" width = "100">
           <figcaption>Odin</figcaption>
         </figure>
         <p>
@@ -85,6 +85,14 @@
 
     <!-- contact information on 3 lines, disclaimer, copyright -->
     <footer>
+      <!-- use address for contact information for the people responsible for the document -->
+      <address>
+        Kitties to Go!<br>
+        (555) 867 - 5309<br>
+        <a href="mailto:kittiestogo@catmail.com">kittiestogo@catmail.com</a>
+      </address>
+        Please Cat Responsibly<br>
+        copyright 2016 Kitties To Go!, LLC<br>
     </footer>
 
   </body>
