Refactor after lesson

--- a/cat-mock-up.html
+++ b/cat-mock-up.html
@@ -35,25 +35,21 @@
     </article>
 
     <!-- testimonials -->
-    <atricle>
+    <article>
       <h2>Testimonials</h2>
       <figure>
         <blockquote>
-          "Please stop looking at your phoneand pet me. Lounge in the doorway eatand then sleep on your face meowwww meowwww"
+          "Please stop looking at your phone and pet me. Lounge in the doorway eatand then sleep on your face meowwww meowwww"
         </blockquote>
-        <!-- if this is the way we properly dotestimonials it is blowing my mind! footers can be in things other than thebody?! woah. -->
-        <footer>
+        <!-- if this is the way we properly do testimonials it is blowing my mind! footers can be in things other than the body?! woah. Utah says no.-->
           — <cite class = "author">Jeremy</cite>
-        </footer>
       </figure>
 
       <figure>
         <blockquote>
           "Meow get video posted to internet for chasing red dot."
         </blockquote>
-        <footer>
           — <cite class = "author">Jenny</cite> from  <cite class = "company">the block</cite>
-        </footer>
       </figure>
 
     </article>
@@ -78,7 +74,7 @@
           <figcaption>Odin</figcaption>
         </figure>
         <p>
-        <a href = "https://www.petfinder.com/" >Book Now -></a>
+        <a href = "https://www.petfinder.com/">Book Now -></a>
         </p>
       </section>
     </aside>
