Added styling to match the mock-up

--- a/cat-mock-up.html
+++ b/cat-mock-up.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- what's the difference between what I have below and meta charset = utf-8? -->
-    <meta http-equiv = "Content-Type" content = "text/html; charset=utf-8" >
-    <title>Ktties to Go!</title>
+
+    <meta charset = "utf-8" >
+    <title>Kitties to Go!</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
   </head>
 
   <body>
@@ -11,8 +12,7 @@
       <!-- book now link -->
       <a href = "https://www.petfinder.com/">Open right MEOW! Book a cat -></a>
       <h1>Kitties to Go!</h1>
-      <p><span>Seattle's premiere drive-thru cat rentals</span></p>
-      <!-- above is like slogan - not important like a header so no h2, h3, etc.  BUT we will want to style it differently so use span? -->
+      <p>Seattle's premiere drive-thru cat rentals</p>
 
       <nav>
         <!-- put links to things here: about, rates, liability release, kitty profiles, book a cat.  We can use an unordered list and then would want to remove the bullets once we style. Links would be different for actual site once the other pages are built-->
@@ -43,7 +43,6 @@
           <blockquote>
             "Please stop looking at your phone and pet me. Lounge in the doorway eatand then sleep on your face meowwww meowwww"
           </blockquote>
-          <!-- if this is the way we properly do testimonials it is blowing my mind! footers can be in things other than the body?! woah. Utah says no.-->
             — <cite class = "author">Jeremy</cite>
         </figure>
 
@@ -63,22 +62,21 @@
       <section>
         <h3>Cat of the Week</h3>
         <figure>
-          <img src = "biscuit.png" alt = "Cat on wrecking ball" height = "100" width = "100">
+          <img src = "images/biscuit.png" alt = "Cat on wrecking ball" height = "100" width = "100">
           <figcaption>The Biscuit</figcaption>
         </figure>
-        <p>All she wants is to break your walls.<a href = "https://www.petfinder.com/"> Book Now -></a>
-        </p>
+        <p>All she wants is to break your walls.</p>
+        <a href = "https://www.petfinder.com/">Book Now -></a>
       </section>
 
       <section>
         <h3>Fan Favorite</h3>
         <figure>
-          <img src = "odin.jpg" alt = "Cat wanting belly-rub" height = "100" width = "100">
+          <img src = "images/odin.jpg" alt = "Cat wanting belly-rub" height = "100" width = "100">
           <figcaption>Odin</figcaption>
         </figure>
-        <p>
+        <p></p>
         <a href = "https://www.petfinder.com/">Book Now -></a>
-        </p>
       </section>
     </aside>
 
